crates/sazid/tests/snapshots/stream_response_test__tests__ntest_callback-3.snap
---
source: tests/stream_response_test.rs
expression: "&chat_message"
---
ChatCompletionResponseMessage:
  StreamResponse:
    - index: 0
      delta:
        role: ~
        content: Hello
        function_call: ~
      finish_reason: ~

