crates/sazid/tests/snapshots/stream_response_test__tests__ntest_callback-32.snap
---
source: tests/stream_response_test.rs
expression: "&session.data.messages.last().unwrap()"
---
message:
  ChatCompletionResponseMessage:
    StreamResponse:
      - index: 0
        delta:
          role: assistant
          content: "Hello! How can I assist you today? If you have any questions or need information on a specific topic, feel free to ask."
          function_call: ~
        finish_reason: stop
rendered:
  role: assistant
  content: "Hello! How can I assist you today? If you have any questions or need information on a specific topic, feel free to ask."
  stylized: "Bot: Hello! How can I assist you today? If you have any questions or need\ninformation on a specific topic, feel free to ask.\n"
  wrapped_lines:
    - "Bot: Hello! How can I assist you today? If you have any questions or need"
    - "information on a specific topic, feel free to ask."
    - ""
  function_call: ~
  name: ~
  finish_reason: stop
finished: true
function_called: false
response_count: 0

